Add ClientErrorException to methods