@@ -231,7 +231,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
         redirectUrls.add(realmManagerCallbackUrl);
     }
 
-    protected <T> T withClientResource(String realm, String client, RealmsResource realmsResource, BiFunction<ClientRepresentation, ClientResource, T> clientResourceConsumer, Supplier<T> notFoundProvider) {
+    protected <T> T withClientResource(String realm, String client, RealmsResource realmsResource, BiFunction<ClientRepresentation, ClientResource, T> clientResourceConsumer, Supplier<T> notFoundProvider) throws ClientErrorException {
         ClientRepresentation clientRepresentation = null;
         ClientResource clientResource = null;
 
@@ -277,7 +277,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public User createUpdateUser(String realm, final User user, String passwordSecret, boolean allowUpdate) throws WebApplicationException {
+    public User createUpdateUser(String realm, final User user, String passwordSecret, boolean allowUpdate) throws ClientErrorException {
         return getRealms(realmsResource -> {
 
             // Force lowercase username
@@ -429,7 +429,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public void deleteUser(String realm, String userId) {
+    public void deleteUser(String realm, String userId) throws ClientErrorException {
 
         User user = getUser(userId);
 
@@ -465,7 +465,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public void requestPasswordReset(String realm, String userId) {
+    public void requestPasswordReset(String realm, String userId) throws ClientErrorException {
         getRealms(realmsResource -> {
             RealmResource realmResource = realmsResource.realm(realm);
             if (realmResource.toRepresentation().getSmtpServer().isEmpty())
@@ -478,7 +478,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public void resetPassword(String realm, String userId, Credential credential) {
+    public void resetPassword(String realm, String userId, Credential credential) throws ClientErrorException {
         getRealms(realmsResource -> {
             realmsResource.realm(realm).users().get(userId).resetPassword(
                 convert(credential, CredentialRepresentation.class)
@@ -488,7 +488,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public String resetSecret(String realm, String userId, String secret) {
+    public String resetSecret(String realm, String userId, String secret) throws ClientErrorException {
         return getRealms(realmsResource -> {
             UserRepresentation userRepresentation = null;
             try {
@@ -519,7 +519,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public Role[] getClientRoles(String realm, String client) {
+    public Role[] getClientRoles(String realm, String client) throws ClientErrorException {
         return getRealms(realmsResource -> {
             RealmResource realmResource = realmsResource.realm(realm);
             ClientsResource clientsResource = realmResource.clients();
@@ -547,7 +547,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public void updateClientRoles(String realm, String clientId, Role[] roles) {
+    public void updateClientRoles(String realm, String clientId, Role[] roles) throws ClientErrorException {
 
         getRealms(realmsResource -> {
             RealmResource realmResource = realmsResource.realm(realm);
@@ -561,7 +561,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
 
             List<RoleRepresentation> removedRoles = existingRoles.stream()
                 .filter(existingRole -> Arrays.stream(roles).noneMatch(r -> existingRole.getId().equals(r.getId())))
-                .collect(Collectors.toList());
+                .toList();
 
             removedRoles.forEach(removedRole -> {
                 realmResource.rolesById().deleteRole(removedRole.getId());
@@ -629,7 +629,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
         });
     }
 
-    protected RoleRepresentation saveClientRole(RealmResource realmResource, ClientResource clientResource, Role role, RoleRepresentation representation) {
+    protected RoleRepresentation saveClientRole(RealmResource realmResource, ClientResource clientResource, Role role, RoleRepresentation representation) throws ClientErrorException {
         if (representation == null) {
             representation = new RoleRepresentation();
         }
@@ -646,7 +646,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public String[] getUserClientRoles(String realm, String userId, String client) {
+    public String[] getUserClientRoles(String realm, String userId, String client) throws ClientErrorException {
         return getRealms(realmsResource -> {
             RealmResource realmResource = realmsResource.realm(realm);
             RoleMappingResource roleMappingResource = realmResource.users().get(userId).roles();
@@ -660,7 +660,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public String[] getUserRealmRoles(String realm, String userId) {
+    public String[] getUserRealmRoles(String realm, String userId) throws ClientErrorException {
         return getRealms(realmsResource -> {
             RealmResource realmResource = realmsResource.realm(realm);
             RoleMappingResource roleMappingResource = realmResource.users().get(userId).roles();
@@ -672,7 +672,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public void updateUserClientRoles(@NotNull String realm, @NotNull String userId, @NotNull String client, String... roles) {
+    public void updateUserClientRoles(@NotNull String realm, @NotNull String userId, @NotNull String client, String... roles) throws ClientErrorException, IllegalStateException {
         getRealms(realmsResource -> {
             RealmResource realmResource = realmsResource.realm(realm);
             UserRepresentation user = realmResource.users().get(userId).toRepresentation();
@@ -724,7 +724,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public void updateUserRealmRoles(String realm, String userId, String... roles) {
+    public void updateUserRealmRoles(String realm, String userId, String... roles) throws ClientErrorException, IllegalStateException {
         getRealms(realmsResource -> {
             RealmResource realmResource = realmsResource.realm(realm);
             UserRepresentation user = realmResource.users().get(userId).toRepresentation();
@@ -770,7 +770,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public boolean isMasterRealmAdmin(String userId) {
+    public boolean isMasterRealmAdmin(String userId) throws ClientErrorException {
         Optional<UserRepresentation> adminUser = getRealms(realmsResource ->
             realmsResource.realm(MASTER_REALM)
                 .users()
@@ -818,7 +818,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public void updateRealm(Realm realm) {
+    public void updateRealm(Realm realm) throws ClientErrorException {
         LOG.fine("Update realm: " + realm);
         getRealms(realmsResource -> {
 
@@ -901,7 +901,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public Realm createRealm(Realm realm) {
+    public Realm createRealm(Realm realm) throws ClientErrorException {
         LOG.fine("Create realm: " + realm);
         return getRealms(realmsResource -> {
 
@@ -949,7 +949,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     @Override
-    public void deleteRealm(String realmName) {
+    public void deleteRealm(String realmName) throws ClientErrorException {
         Realm realm = getRealm(realmName);
 
         if (realm == null) {
@@ -1019,19 +1019,19 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
     }
 
     // TODO: Provide an implementation agnostic client
-    public ClientRepresentation getClient(String realm, String client) {
+    public ClientRepresentation getClient(String realm, String client) throws ClientErrorException {
         return getRealms(realmsResource ->
             withClientResource(realm, client, realmsResource, (clientRepresentation, clientResource) ->
                 clientRepresentation, null));
     }
 
     // TODO: Provide an implementation agnostic client
-    public ClientRepresentation[] getClients(String realm) {
+    public ClientRepresentation[] getClients(String realm) throws ClientErrorException {
         return getRealms(realmsResource -> realmsResource.realm(realm).clients().findAll().toArray(new ClientRepresentation[0]));
     }
 
     // TODO: Provide an implementation agnostic client
-    public ClientRepresentation createUpdateClient(String realm, ClientRepresentation client) {
+    public ClientRepresentation createUpdateClient(String realm, ClientRepresentation client) throws ClientErrorException {
 
         if (client == null || client.getClientId() == null) {
             throw new IllegalArgumentException("Client is null or clientId is missing");
@@ -1071,7 +1071,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
      * @return the imported configuration parameters which can be added to the {@link Map} provided to
      * {@link #createUpdateIdentityProvider(String, String, String, String, Map)} when creating or updating an identity provider.
      */
-    public Map<String, String> getIdentityProviderImportConfig(String realm, Map<String, Object> importData) {
+    public Map<String, String> getIdentityProviderImportConfig(String realm, Map<String, Object> importData) throws ClientErrorException {
         if (importData == null || importData.isEmpty()) {
             throw new IllegalArgumentException("Import data is null or empty");
         }
@@ -1079,14 +1079,14 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
         return getRealms(realmsResource -> realmsResource.realm(realm).identityProviders().importFrom(importData));
     }
 
-    public List<IdentityProviderRepresentation> getIdentityProviders(String realm) {
+    public List<IdentityProviderRepresentation> getIdentityProviders(String realm) throws ClientErrorException {
         return getRealms(realmsResource -> {
             IdentityProvidersResource identityProvidersResource = realmsResource.realm(realm).identityProviders();
             return identityProvidersResource.findAll();
         });
     }
 
-    public void deleteIdentityProvider(String realm, String alias) {
+    public void deleteIdentityProvider(String realm, String alias) throws ClientErrorException {
         getRealms(realmsResource -> {
             IdentityProvidersResource identityProvidersResource = realmsResource.realm(realm).identityProviders();
             identityProvidersResource.get(alias).remove();
@@ -1094,7 +1094,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
         });
     }
 
-    public void createUpdateIdentityProvider(String realm, String alias, String providerId, String displayName, Map<String, String> config) {
+    public void createUpdateIdentityProvider(String realm, String alias, String providerId, String displayName, Map<String, String> config) throws ClientErrorException {
         IdentityProviderRepresentation representation = new IdentityProviderRepresentation();
         representation.setAlias(alias);
         representation.setProviderId(providerId);
@@ -1118,7 +1118,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
         });
     }
 
-    public void createUpdateIdentityProviderMapper(String realm, String idpAlias, String mapperName, String idpMapper, Map<String, String> mapperConfig) {
+    public void createUpdateIdentityProviderMapper(String realm, String idpAlias, String mapperName, String idpMapper, Map<String, String> mapperConfig) throws ClientErrorException {
         getRealms(realmsResource -> {
             IdentityProviderResource idpResource = realmsResource.realm(realm).identityProviders().get(idpAlias);
 
@@ -1144,7 +1144,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
         });
     }
 
-    public void addAuthenticationExecutionConfig(String realm, String flowAlias, String executionProviderId, String authenticatorAlias, Map<String, String> authenticatorConfig) {
+    public void addAuthenticationExecutionConfig(String realm, String flowAlias, String executionProviderId, String authenticatorAlias, Map<String, String> authenticatorConfig) throws ClientErrorException {
         getRealms(realmsResource -> {
             AuthenticationManagementResource authenticationManagementResource = realmsResource.realm(realm).flows();
             List<AuthenticationExecutionInfoRepresentation> executions = authenticationManagementResource.getExecutions(flowAlias);
@@ -1166,7 +1166,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
         });
     }
 
-    public void deleteClient(String realm, String clientId) {
+    public void deleteClient(String realm, String clientId) throws ClientErrorException {
 
         if (TextUtil.isNullOrEmpty(realm)
             || TextUtil.isNullOrEmpty(clientId)) {
@@ -1174,12 +1174,6 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
         }
 
         getRealms(realmsResource -> {
-            RealmResource realmResource = realmsResource.realm(realm);
-
-            if (realmResource == null) {
-                LOG.fine("Invalid realm provided for deleteClient call: " + realm);
-                return null;
-            }
 
             LOG.fine("Deleting client: realm=" + realm + ", client ID=" + clientId);
             return withClientResource(realm, clientId, realmsResource, (clientRepresentation, clientResource) -> {
@@ -1350,7 +1344,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
         }
     }
 
-    public String addLDAPConfiguration(String realm, ComponentRepresentation componentRepresentation) {
+    public String addLDAPConfiguration(String realm, ComponentRepresentation componentRepresentation) throws ClientErrorException {
 
         return getRealms(realmsResource -> {
             RealmResource realmResource = realmsResource.realm(realm);
@@ -1370,7 +1364,7 @@ public class ManagerKeycloakIdentityProvider extends KeycloakIdentityProvider im
         });
     }
 
-    public String addLDAPMapper(String realm, ComponentRepresentation componentRepresentation) {
+    public String addLDAPMapper(String realm, ComponentRepresentation componentRepresentation) throws ClientErrorException {
         return getRealms(realmsResource -> {
             RealmResource realmResource = realmsResource.realm(realm);
             Response response = realmResource.components().add(componentRepresentation);
